--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "jquery": "^3.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "wowjs": "^1.1.3"
   },
   "eslintConfig": {
     "root": true,
